Fixed Discord icon not disappearing when screen is too small (#2)
* fixed discord icon not disappearing when screen is too small

<3

* i put them around the wrong way and it was going to annoy me

🏳️‍⚧️ :3

--- a/styles/nav.css
+++ b/styles/nav.css
@@ -189,8 +189,14 @@ nav {
     }
 }
 
-@media only screen and (max-width: 425px) {
+@media only screen and (max-width: 480px) {
     #link-twitter {
+        display: none;
+    }
+}
+
+@media only screen and (max-width: 425px) {
+    #link-discord {
         display: none;
     }
 }
